src/test/ui/macros/macro-attribute.rs
#[doc = $not_there] //~ ERROR unexpected token: `$`
fn main() { }
